--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
          <section class="main_block">
             <div class="relative_block">
-                <div class="cover_img"> <img src="C:\Users\Maria\Desktop\landing\img\main_cover.jpg" alt=""></div>
+                <div class="cover_img"> <img src="C:\Users\Maria\Desktop\secondrepo\img\main_cover.jpg" alt=""></div>
                 <div class="desc">
                     <h1 class="title">Turnkey Repair in the <br> city of <span>Rostov-on-Don</span></h1>
                     <p class="text">Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work</p>
