--- a/index.html
+++ b/index.html
@@ -40,18 +40,19 @@
         </nav>
     </header>
     <main>
-         <section class="main_block">
+        <section class="main_block">
             <div class="relative_block">
                 <div class="cover_img"> <img src="C:\Users\Maria\Desktop\secondrepo\img\main_cover.jpg" alt=""></div>
                 <div class="desc">
                     <h1 class="title">Turnkey Repair in the <br> city of <span>Rostov-on-Don</span></h1>
                     <p class="text">Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work</p>
+                <div class="buttons">
+                    <div class="button1"><a href="#">CALCULATE THE COST</a></div>
+                    <div class="button2"><a href="#">SUBMIT YOUR APPLICATION</a></div>
                 </div>
+            </div> 
             </div>
-         </section>   
+        </section>   
     </main>
-    
-
-    
 </body>
 </html>
