--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -46,11 +49,10 @@
                         <h1 class="title">Turnkey Repair in the <br> city of <span>Rostov-on-Don</span></h1>
                         <p class="text">Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work</p>
                     <div class="buttons">
-                        <div class="button1"><a href="#">CALCULATE THE COST</a></div>
-                        <div class="button2"><a href="#">SUBMIT YOUR APPLICATION</a></div>
+                        <a class="button1" href="#">CALCULATE THE COST</a>
+                        <a class="button2" href="#">SUBMIT YOUR APPLICATION</a>
                     </div>
                 </div> 
-                </div>
             </section>   
         </main>
 </body>
