--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+    <title>RDP</title>
 </head>
 <body>
     <header>
@@ -36,7 +37,7 @@
 
             <div class="end">
                 <ul>
-                    <li>+7 (928) 768-32-39</li>
+                    <li><a href="callto:+7 (928) 768-32-39">+7 (928) 768-32-39</a></li>
                     <a href="#" class="button"><li><em>Request a call</em></li></a>
                 </ul>
             </div>
@@ -49,8 +50,8 @@
                         <h1 class="title">Turnkey Repair in the <br> city of <span>Rostov-on-Don</span></h1>
                         <p class="text">Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work</p>
                     <div class="buttons">
-                        <a class="button1" href="#">CALCULATE THE COST</a>
-                        <a class="button2" href="#">SUBMIT YOUR APPLICATION</a>
+                        <a class="button1 btn_cnfg txt_style" href="#">CALCULATE THE COST</a>
+                        <a class="button2 btn_cnfg txt_style" href="#">SUBMIT YOUR APPLICATION</a>
                     </div>
                 </div> 
             </section>   
