--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         
             <div class="center">
                 <ul>
-                    <li> <a href="#">HOME</a></li>
-                    <li> <a href="#">PROJECTS</a></li>
-                    <li> <a href="#">MEASUREMENT</a></li>
-                    <li> <a href="#">TEAM</a></li>
-                    <li> <a href="#">REVIEWS</a></li>
-                    <li> <a href="#">CONTACTS</a></li>
+                    <li><a id="home" href="#">HOME</a></li>
+                    <li><a href="#">PROJECTS</a></li>
+                    <li><a href="#">MEASUREMENT</a></li>
+                    <li><a href="#">TEAM</a></li>
+                    <li><a href="#">REVIEWS</a></li>
+                    <li><a href="#">CONTACTS</a></li>
                 </ul>
             </div>
 
