--- a/completed-projects.html
+++ b/completed-projects.html
@@ -20,15 +20,23 @@
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <title>complecated projects</title>
 </head>
-<body>
-    <header>
-        <nav class="nav">
-            <ul class="city">
-                <li>Rostov-on-Don, Admiral</li>
-                <li>Sochi Thieves</li>
-                <li>Rostov-on-Don Patriotic</li>
-            </ul>
-        </nav>
-    </header>
+<body class="second_body">
+    <div class="void">
+        <div class="first-block-of-content">
+            <nav class="nav-of-first-block">
+                <ul>
+                    <li>Rostov-on-Don, Admiral</li>
+                    <li>Sochi Thieves</li>
+                    <li>Rostov-on-Don Patriotic</li>
+                </ul>
+            </nav>
+            <div class="img"><img src="img/room.png" alt=""></div>
+            <div class="text-block">
+                <h1 class="title-of-first-block">Completed <br> projects</h1>
+                <p>Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction market we have made happy more than 1000 families</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
