finished fourth section

--- a/index.html
+++ b/index.html
@@ -139,10 +139,40 @@
                                 <li>Replacing sockets and switches</li>
                                 <li>Replacing doors</li>
                             </ul>
+                            <button class="form_button gold-button btn_desc1 header-text">from 900 rub / m2</button>
                         </div>
                     </div>    
-                    <div class="gallery_item2"><img src="img/Overhaul.jpg" alt=""></div>
-                    <div class="gallery_item3"><img src="img/Designer Repair.jpg" alt=""></div>
+                    <div class="gallery_item2"><img src="img/Overhaul.jpg" alt="">
+                        <div class="desc1 common-font black_text">
+                            <h2 class="header-text redecorating">Overhaul</h2>
+                            <ul>
+                                <li>Dismantling of old coatings</li>
+                                <li>Wallpapering</li>
+                                <li>Painting walls and ceilings</li>
+                                <li>Laying flooring</li>
+                                <li>Replacing plumbing</li>
+                                <li>Replacing sockets and switches</li>
+                                <li>Replacing doors</li>
+                            </ul>
+                            <button class="form_button gold-button btn_desc1 header-text">from 1800 rub / m2</button>
+                        </div>
+                    
+                    </div>
+                    <div class="gallery_item3"><img src="img/Designer Repair.jpg" alt="">
+                        <div class="desc1 common-font black_text">
+                            <h2 class="header-text redecorating">Redecorating</h2>
+                            <ul>
+                                <li>Dismantling of old coatings</li>
+                                <li>Wallpapering</li>
+                                <li>Painting walls and ceilings</li>
+                                <li>Laying flooring</li>
+                                <li>Replacing plumbing</li>
+                                <li>Replacing sockets and switches</li>
+                                <li>Replacing doors</li>
+                            </ul>
+                            <button class="form_button gold-button btn_desc1 header-text">from 4000 rub / m2</button>
+                        </div>
+                    </div>
                 </div>
 
             </div>
