end of sixth step

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&   display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&   family=Yeseva+One&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&   family=Yeseva+One&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
@@ -174,9 +174,88 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
+        </section>
+        <section class="fifth_step">
+            <div class="content_of_fifth_step">
+                <div class="list_of_fifth common-font black_text">
+                    <div class="item_01">
+                        <img src="img/01.svg" alt="">
+                        <p>Our specialist will arrive for measurements per day contact, or appoint a date convenient for you</p>
+                    </div>
+                    <div class="item_02">
+                        <img src="img/02.svg" alt="">
+                        <p>Free metering</p>
+                    </div>
+                    <div class="item_03">
+                        <img src="img/03.svg" alt="">
+                        <p>Free consultation</p>
+                    </div>
+                    <div class="item_04">
+                        <img src="img/04.svg" alt="">
+                        <p>Get a cost estimate and the timing of your future repairs</p>
+                    </div>
+                </div>
+                <form class="form_of_fifth common-font">
+                    <div class="content_of_form">
+                        <p>Leave a request for free departure of the measurer</p>
+                        <div class="first_input fifth_input">
+                            <label for="name">Name</label>
+                            <input type="text" name="name" id="name" placeholder="What is your name:">
+                        </div>
+                        <div class="second_input fifth_input">
+                            <label for="phone">Phone</label>
+                            <input type="text" name="phone" id="phone" placeholder="Your phone number:">
+                        </div>
+                        <div class="third_input fifth_input">
+                            <label for="email">Email</label>
+                            <input type="text" name="email" id="email" placeholder="Your email">
+                        </div>
+                        <div class="checkbox second_check"><img src="img/checkbox.svg" alt="">  
+                            <p class="common-font">I agree to the processing of personal data</p>
+                        </div>
+                        <button class="form_button gold-button measurer">Call the measurer</button>
+                        <div class="piggy common-font">
+                            <p><img src="img/piggy3.svg" alt=""></p>
+                            <p>Help save 10 - 20% of the cost of materials</p></div>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <section class="sixth_step">
+            <div class="content_of_sixth_step">
+                <div class="first_col_of_six_step">
+                    <div class="header-text header_of_sixth_section">
+                        <h3>We realize your <br>
+                            wildest fantasies</h3>
+                    </div>
+                    <div class="list_of_arch_styles common-font">
+                        <ul class="arch">
+                             <li>American classic</li>
+                             <li>Empire</li>
+                             <li>Classical</li>
+                             <li>Loft</li>
+                             <li>Minimalism</li>
+                             <li>Provence</li>
+                             <li>Romanticism</li>
+                             <li>Scandinavian style</li>
+                             <li>Mediterranean style</li>
+                             <li>High tech</li>
+                             <li>Eclecticism</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="gallery2">
+                    <div class="first_col">
+                        <img src="img/clock.png" alt="">
+                        <img src="img/tv.png" alt="">
+                    </div>
+                    <div class="second_col">
+                        <img src="img/sofa.png" alt="">
+                        <img src="img/flower.png" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     
