trying to find out how to make it right

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </ul>
                 <ul class="end_nav common-font">
                     <li class="number">+7 (928) 768-32-39</li>
-                    <li class="button"><button class="gold-button"><em>Request a call</e></button></li>
+                    <li class="button"><button class="gold-button" style="font-size: 0.8em;"><em>Request a call</em></button></li>
                 </ul>
             </nav>
         </section>
@@ -41,11 +41,12 @@
         <section class="first_step">
             <div class="content_of_first_section">
                 <div class="content_text">
-                    <h1 class="header-text">Turnkey Repair in the <br> city of <span class="gold-text">Rostov-on-Don</span></h1>
-                    <p class="common-font">Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work</p>
+                    <h1 class="header-text lead-header">Turnkey Repair in the <br> city of <span class="gold-text">Rostov-on-Don</span></h1>
+                    <p class="common-font lead-text">Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work</p>
                     <div class="buttons">
-                        <button class="dick gold-button">CALCULATE THE COST</button>
-                        <button class="opacity-button">SUBMIT YOUR APPLICATION</button></div>
+                        <button class="calc common-font"><em>CALCULATE THE COST</em></button>
+                        <button class="sub common-font empty"><em>SUBMIT YOUR APPLICATION</e></button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -60,7 +61,7 @@
                 </div>
                 <div class="Completed_projects">
                     <h2 class="header-text gold-text ">Completed <br> projects</h2>
-                    <p class="common-font">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction     market we have made happy more than 1000 families</p>
+                    <p class="common-font monitor">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction     market we have made happy more than 1000 families</p>
                     <div class="discription">
                         <div class="column1">
                             <div>
@@ -257,7 +258,106 @@
                 </div>
             </div>
         </section>
+        <section class="seventh_step">
+            <div class="content_of_seventh_step">
+                <div class="header_of_fourth_section header_of_seventh_section">
+                    <h3 class="black_text our_clients">our clients</h3>
+                    <img src="img/handshake.svg" alt="">
+                    <div class="desc_of_h_7th">
+                        <p class="common-font black_text">80% of our customers recommend us to their friends and family.</p>
+                    </div>
+                </div>
+                <div class="seventh_gallery">
+                    <div class="gallery_7th">
+                        <div class="desc2 common-font black_text people">
+                            <h2 class="header-text redecorating people"> <img src="img/fedosova.png" alt=""> Fedosova Maria <br>
+                                Konstantinovna</h2>
+                            <p class="common-font people_desc">I want to thank the guys for their work. We put your shower part in repair. I am very grateful that I referred to the repair as to my own. Great thanks I express the project to Georgia for its professionalism and approach.</p>
+                            <p class="common-font people_desc">The repair process was turned out in terms, faster than anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality satisfied. Prices democratic. I recommend these masters.</p>
+                            <div class="btn_conteiner">
+                                <button class="gold-button btn_desc2 header-text"><img src="img/stonks.svg" alt="">40 m2</button>
+                                <button class="gold-button btn_desc2 header-text"><img src="img/calendar.svg" alt="">48 DAYS</button>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="gallery_7th">
+                        <div class="desc2 common-font black_text people">
+                            <h2 class="header-text redecorating people"> <img src="img/afanasyev.png" alt=""> Afanasyev Sergey <br> Alexandrovich</h2>
+                            <p class="common-font people_desc">I want to thank the guys for their work. We put your shower part in repair. I am very grateful that I referred to the repair as to my own. Great thanks I express the project to Georgia for its professionalism and approach.</p>
+                            <p class="common-font people_desc">The repair process was turned out in terms, faster than anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality satisfied. Prices democratic. I recommend these masters.</p>
+                            <div class="btn_conteiner">
+                                <button class="gold-button btn_desc2 header-text"><img src="img/stonks.svg" alt="">90 м2</button>
+                                <button class="gold-button btn_desc2 header-text"><img src="img/calendar.svg" alt="">128 DAYS</button>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="gallery_7th">
+                        <div class="desc2 common-font black_text people">
+                            <h2 class="header-text redecorating people"> <img src="img/kiriev.png" alt=""> Kiriev Egor <br> Leonidovich</h2>
+                            <p class="common-font people_desc">I want to thank the guys for their work. We put your shower part in repair. I am very grateful that I referred to the repair as to my own. Great thanks I express the project to Georgia for its professionalism and approach.</p>
+                            <p class="common-font people_desc">The repair process was turned out in terms, faster than anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality satisfied. Prices democratic. I recommend these masters.</p>
+                            <div class="btn_conteiner">
+                                <button class="gold-button btn_desc2 header-text"><img src="img/stonks.svg" alt="">56 м2</button>
+                                <button class="gold-button btn_desc2 header-text"><img src="img/calendar.svg" alt="">86 DAYS</button>
+                            </div>
+                        </div>
+                    </div>    
+            </div>
+        </section>  
+        <section class="final_section">
+            <div class="content_of_final_section">
+                <form class="form_of_fifth form_of_final common-font">
+                    <div class="content_of_form content_of_final_form">
+                        <p class="header-text">have any questions?</p>
+                        <div class="form_wrapper">
+                            <div class="first_input fifth_input final_input">
+                                <label for="name">Name</label>
+                                <input type="text" name="name" id="name" placeholder="What is your name:">
+                            </div>
+                            <div class="second_input fifth_input final_input">
+                                <label for="phone">Phone</label>
+                                <input type="text" name="phone" id="phone" placeholder="Your phone number:">
+                            </div>
+                            <div class="third_input fifth_input final_input new_line">
+                                <label for="email">Email</label>
+                                <input type="text" name="email" id="email" placeholder="Your email">
+                            </div>
+                            <div class="checkbox second_check final_check"><img src="img/checkbox.svg" alt="">  
+                                <p class="common-font">I agree to the processing of personal data</p>
+                            </div>
+
+                            <div class="button-wrapper"><button class="form_button gold-button common-font final_button">SUBMIT</button></div>
+                        </div>
+                    </div>    
+                </form>
+                <div class="header-text gold-text">
+                    <p style="text-align: center;">Rostov-on-Don, Nansen St., 239 Shopping Center <br>
+                    Decorum Tel +7 (928) 768 32 29
+                    </p>
+                </div>
+                <div class="sm"><img src="img/sm.svg" alt=""></div>
+                <div class="map"><img src="img/map.png" alt=""></div>
+            </div>
+        </section>     
     </main>
-    
+    <!-- <footer class="footer">
+        <section class="footer_nav">
+            <nav class="footer_content">
+                <p class="logo logo-bottom gold-text">IC "Repair Design Project"</p>
+                <ul class="mid_nav common-font">
+                    <li>HOME</li>
+                    <li>PROJECTS</li>
+                    <li>MEASUREMENT</li>
+                    <li>TEAM</li>
+                    <li>REVIEWS</li>
+                    <li>CONTACTS</li>
+                </ul>
+                <ul class="end_nav common-font">
+                    <li class="number">+7 (928) 768-32-39</li>
+                    <li class="button"><button class="gold-button"><em>Request a call</em></button></li>
+                </ul>
+            </nav>
+        </section> -->
+    </footer>
 </body>
 </html>
