--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     <li>REVIEWS</li>
                     <li>CONTACTS</li>
                 </ul>
-                <ul class="end_nav common-font">
-                    <li class="number">+7 (928) 768-32-39</li>
-                    <li class="button"><button class="gold-button" style="font-size: 0.8em;"><em>Request a call</em></button></li>
-                </ul>
+                <div class="end_nav common-font">
+                    <div class="number">+7 (928) 768-32-39</div>
+                    <button class="gold-button" style="font-size: 0.8em;"><em>Request a call</em></button>
+                </div>
             </nav>
         </section>
     </header>
@@ -42,7 +42,7 @@
             <div class="content_of_first_section">
                 <div class="content_text">
                     <h1 class="header-text lead-header">Turnkey Repair in the <br> city of <span class="gold-text">Rostov-on-Don</span></h1>
-                    <p class="common-font lead-text">Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work</p>
+                    <p class="common-font lead-text">Get ready-made turnkey repairs on time <br> with work time saving up to 45 days and 20% from <br> cost of materials due to the organization of work</p>
                     <div class="buttons">
                         <button class="calc common-font"><em>CALCULATE THE COST</em></button>
                         <button class="sub common-font empty"><em>SUBMIT YOUR APPLICATION</e></button>
@@ -62,7 +62,7 @@
                 <div class="Completed_projects">
                     <h2 class="header-text gold-text ">Completed <br> projects</h2>
                     <p class="common-font monitor">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction     market we have made happy more than 1000 families</p>
-                    <div class="discription">
+                    <div class="description">
                         <div class="column1">
                             <div>
                                 <h3>City:</h3>
@@ -84,13 +84,10 @@
                                 <p class="common-font">Upon request</p>
                             </div>
                         </div>
-                        <div class="slider_arrows"><img src="img/slider_arrows.svg" alt=""></div>
                     </div>
-                    
-                    <div class="slider">
-                        <img src="img/room.png" alt="">
-                    </div>
+                    <div class="slider_arrows"><img src="img/slider_arrows.svg" alt=""></div>
                </div>
+               <div class="slider"><img src="img/room.png" alt=""></div>
             </div>
         </section>
         <section class="third_step background_of_third_step">
@@ -340,24 +337,22 @@
             </div>
         </section>     
     </main>
-    <!-- <footer class="footer">
-        <section class="footer_nav">
-            <nav class="footer_content">
-                <p class="logo logo-bottom gold-text">IC "Repair Design Project"</p>
-                <ul class="mid_nav common-font">
-                    <li>HOME</li>
-                    <li>PROJECTS</li>
-                    <li>MEASUREMENT</li>
-                    <li>TEAM</li>
-                    <li>REVIEWS</li>
-                    <li>CONTACTS</li>
-                </ul>
-                <ul class="end_nav common-font">
-                    <li class="number">+7 (928) 768-32-39</li>
-                    <li class="button"><button class="gold-button"><em>Request a call</em></button></li>
-                </ul>
-            </nav>
-        </section> -->
+    <footer>
+        <div class="content_of_footer">
+            <div class="logo gold-text">IC "Repair Design Project"</div>
+            <ul class="mid_nav common-font">
+                <li>HOME</li>
+                <li>PROJECTS</li>
+                <li>MEASUREMENT</li>
+                <li>TEAM</li>
+                <li>REVIEWS</li>
+                <li>CONTACTS</li>
+            </ul>
+             <div class="end_nav common-font">
+                <div class="number">+7 (928) 768-32-39</div>
+                <button class="gold-button" style="font-size: 0.8em;"><em>Request a call</em></button>
+            </div>
+        </div>    
     </footer>
 </body>
 </html>
