--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
                         <li>Rostov-on-Don Patriotic</li>
                     </ul>
                 </div>
-                <div class="Completed_projects">
-                    <h2 class="header-text gold-text ">Completed <br> projects</h2>
-                    <p class="common-font monitor">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction     market we have made happy more than 1000 families</p>
-                    <div class="description">
+               <div class="test">
+                    <div class="Completed_projects">
+                        <h2 class="header-text gold-text ">Completed <br> projects</h2>
+                        <p class="common-font monitor">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction     market we have made happy more than 1000 families</p>
+                        <div class="slider_arrows"><img src="img/slider_arrows.svg" alt=""></div>
+                   </div>
+                   <div class="description">
                         <div class="column1">
                             <div>
                                 <h3>City:</h3>
@@ -85,9 +88,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="slider_arrows"><img src="img/slider_arrows.svg" alt=""></div>
+                    <div class="slider"><img src="img/room.png" alt=""></div>
                </div>
-               <div class="slider"><img src="img/room.png" alt=""></div>
             </div>
         </section>
         <section class="third_step background_of_third_step">
