tried to fix scale issue

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     </p>
                 </div>
                 <div class="sm"><img src="img/sm.svg" alt=""></div>
-                <div class="map"><img src="img/map.png" alt=""></div>
+                <div class="map"><img src="img/map1.png" alt=""></div>
             </div>
         </section>     
 
