added some stuff

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     </div>
                     <div class="list_of_arch_styles common-font">
                         <ul class="arch">
-                             <li>American classic</li>
+                             <li><span class="gold-text line">American classic</span></li>
                              <li>Empire</li>
                              <li>Classical</li>
                              <li>Loft</li>
